cmake_minimum_required (VERSION 3.9.0)
project (raimd)
include_directories (
include
${CMAKE_SOURCE_DIR}/libdecnumber/include
)
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
if ($<CONFIG:Release>)
add_compile_options (/arch:AVX2 /GL /std:c++latest)
else ()
add_compile_options (/arch:AVX2 /std:c++latest)
endif ()
else ()
add_compile_options (-Wall -Wextra -O2 -flto=auto -ffat-lto-objects -fexceptions -g -grecord-gcc-switches -pipe -Wall -Wno-complain-wrong-lang -Werror=format-security -Wp,-U_FORTIFY_SOURCE,-D_FORTIFY_SOURCE=3 -Wp,-D_GLIBCXX_ASSERTIONS -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -fstack-protector-strong -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1  -m64 -march=x86-64 -mtune=generic -fasynchronous-unwind-tables -fstack-clash-protection -fcf-protection -mtls-dialect=gnu2 -fno-omit-frame-pointer -mno-omit-leaf-frame-pointer -ggdb -O3 -mavx -fno-omit-frame-pointer)
endif ()
add_library (raimd STATIC src/md_msg.cpp src/md_field_iter.cpp src/md_iter_map.cpp src/json.cpp src/json_msg.cpp src/rv_msg.cpp src/tib_msg.cpp src/tib_sass_msg.cpp src/mf_msg.cpp src/rwf_msg.cpp src/rwf_writer.cpp src/rwf_dict.cpp src/md_dict.cpp src/cfile.cpp src/app_a.cpp src/enum_def.cpp src/flistmap.cpp src/decimal.cpp src/md_list.cpp src/md_hash.cpp src/md_set.cpp src/md_zset.cpp src/md_geo.cpp src/md_hll.cpp src/md_stream.cpp src/glue.cpp src/md_replay.cpp src/md_hash_tab.cpp src/dict_load.cpp src/md_msg_writer.cpp)
if (NOT TARGET decnumber)
add_library (decnumber STATIC IMPORTED)
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
set_property (TARGET decnumber PROPERTY IMPORTED_LOCATION_DEBUG ../libdecnumber/build/Debug/decnumber.lib)
set_property (TARGET decnumber PROPERTY IMPORTED_LOCATION_RELEASE ../libdecnumber/build/Release/decnumber.lib)
set_property (TARGET decnumber PROPERTY IMPORTED_LOCATION ../libdecnumber/build/decnumber.lib)
else ()
set_property (TARGET decnumber PROPERTY IMPORTED_LOCATION ../libdecnumber/build/libdecnumber.a)
endif ()
endif ()
link_libraries (raimd decnumber)
add_definitions (-DMD_VER=1.24.0-47)
add_executable (test_mddec test/test_mddec.cpp)
add_executable (test_json test/test_json.cpp)
add_executable (test_msg test/test_msg.cpp)
add_executable (test_list test/test_list.cpp)
add_executable (test_hash test/test_hash.cpp)
add_executable (test_set test/test_set.cpp)
add_executable (test_zset test/test_zset.cpp)
add_executable (test_geo test/test_geo.cpp)
add_executable (test_hll test/test_hll.cpp)
add_executable (test_stream test/test_stream.cpp)
add_executable (md_test_dict test/test_dict.cpp)
add_executable (md_read_msg test/read_msg.cpp)
add_executable (write_msg test/write_msg.cpp)
add_executable (basic_msg test/basic_msg.cpp)
add_executable (pretty_js test/pretty_js.cpp)
add_executable (cache_msg test/cache_msg.cpp)
add_executable (map_test test/map_test.cpp)
